# ray-tracing

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml  rust.yml
src/: Ray.rs  Vec3.rs  main.rs  make-easy-ppm.cpp
utils/ppm-viewer/: view-ppm.py
